--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "start": "node ./bin/www",
     "test": "npx jest --testTimeout=10000 --forceExit"
   },
+  "jest": {
+    "reporters": ["default", "jest-junit"]
+  },
   "dependencies": {
     "bootstrap": "4.0.0",
     "cookie-parser": "~1.4.3",
@@ -32,6 +35,7 @@
     "@babel/preset-env": "7.1.6",
     "babel-loader": "8.0.4",
     "jest": "25.1.0",
+    "jest-junit": "10.0.0",
     "passport-stub": "1.1.1",
     "supertest": "3.1.0",
     "webpack": "4.26.1",
